--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -177,7 +177,8 @@ p {
   }
 
   .experiences-section,
-  .educations-section {
+  .educations-section,
+  .grant-section{
     .item {
       margin-bottom: 30px;
     }
