--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -203,7 +203,8 @@ p {
     color: $text-grey;
   }
   .company,
-  .university {
+  .university,
+  .project {
     margin-bottom: 10px;
     color: $text-grey;
   }
