--- a/_includes/grants.html
+++ b/_includes/grants.html
@@ -15,7 +15,7 @@
     <div class="meta">
 
       <div class="upper-row">
-        <h3 class="job-title">{{ grant.company }}</h3>
+        <h3 class="job-title">{{ grant.funder }}</h3>
         <div class="time">{{ grant.time }}</div>
       </div><!--//upper-row-->
 
